# protomodel

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindFlatbuffers.cmake  FindMstch.cmake  compiler.cmake
include/protomodel/: context.h  error.h  protomodel.h
model/: protomodel.fbs
scripts/: ci-build.sh  install-deps.sh
src/: explorer.cpp  main.cpp  utils.cpp
templates/: toml-loader.cpp.mustache  toml-loader.h.mustache
third_parties/: README.md
tools/: README.md  protomerge.cpp
